--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.elasticsearch.cluster-name=ashin
 spring.data.elasticsearch.cluster-nodes=66.42.64.129:9300
+logging.level.org.springframework.data.elasticsearch.core=DEBUG
